--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   },
   "homepage": "https://github.com/sufcboy/random_uk_national_insurance_number#readme",
   "devDependencies": {
-    "babel-cli": "6.16.0",
-    "babel-core": "6.17.0",
-    "babel-loader": "6.2.5",
+    "babel-cli": "7.4.*",
+    "babel-core": "7.4.*",
+    "babel-loader": "8.0.*",
     "babel-preset-latest": "6.16.0",
-    "babel-register": "6.16.3",
+    "babel-register": "6.26.*",
     "chai": "3.5.0",
     "chalk": "1.1.3",
-    "eslint": "3.8.1",
+    "eslint": "4.18.2",
     "eslint-plugin-import": "2.12.0",
     "mocha": "5.2.0",
     "webpack": "1.13.2"
